--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,3 @@
-[package]
-name = "heroku_pg_backup"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["crates/*"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-reqwest = { version = "0.10.8", features = ["blocking"] }
