--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -16,4 +16,5 @@ tower = "0.4.13"
 serde = { version = "1.0.175", features = ["derive"] }
 serde_json = "1.0.67"
 tonic = { version = "0.9.2", default-features = false, features = ["tls-webpki-roots"] }
+dotenv = "0.15.0"
 
